--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -65,168 +65,170 @@
     </section>
 
     <section id="work">
-      <div class="item" data-color="primary-color">
-        <div class="body">
-          <div class="item__header">
-            <span
-              ><strong class="text-highlight hover"> About Me. </strong></span
-            >
-          </div>
-          <div class="item__subheader">
-            <span>
-              From interaction design to scaleable design systems, single-page
-              apps to something more experimental with WebGL. I help awesome
-              people to build ambitious yet accessible web projects -
-              <strong> the wilder, the better </strong>.
-            </span>
-          </div>
-        </div>
-        <a
-          class="item__button"
-          data-color="tertiary-color"
-          data-color-bg="transparent-color"
-        >
-          <span class="label"><strong>Let's work together</strong></span>
-          <span class="fill"><strong>Let's work together</strong></span>
-        </a>
-      </div>
-      <div class="work__list">
-        <div class="header">
-          <div class="div">
-            <span><strong>Work Experience</strong></span>
-            <i class="fa-solid fa-arrow-up"></i>
-          </div>
-        </div>
-        <div class="work">
-          <div class="date"><span>SEP 2023 — PRESENT</span></div>
+      <div class="work__container">
+        <div class="item" data-color="primary-color">
           <div class="body">
-            <div class="details">
-              <div class="title">
-                <a href="" target="_blank" class="">
-                  &nbsp;<strong
-                    >Junior Software Developer &nbsp; · &nbsp; Bastion,
-                    Inc.</strong
-                  >
-                </a>
-                <i class="fa-solid fa-arrow-up"></i>
-              </div>
-              <div class="description">
-                &nbsp;
-                <span>
-                  Developed and optimized web applications with ASP.NET MVC and
-                  mobile apps using Ionic Angular, focusing on functionality,
-                  responsiveness, and cross-platform compatibility. Conducted
-                  thorough testing and debugging, and maintained robust
-                  performance through ongoing updates and collaboration with
-                  cross-functional teams.
-                </span>
-              </div>
-            </div>
-            <!-- <div class="links">
-              <a href="#" class="link" target="_blank">
-                <i class="fa-solid fa-paperclip"></i>
-                <span>OmniPay</span></a
-              >
-              <a href="#" class="link" target="_blank">
-                <i class="fa-solid fa-paperclip"></i>
-                <span>Binpo</span></a
-              >
-            </div> -->
-            <div class="skills">
-              <span class="skill">ASP.NET MVC</span>
-              <span class="skill">C#</span>
-              <span class="skill">Ionic Framework</span>
-              <span class="skill">AngularJS</span>
-              <span class="skill">SCSS</span>
-              <span class="skill">GitHub</span>
-            </div>
-          </div>
-        </div>
-        <div class="work">
-          <div class="date"><span>Jan 2023 — May 2023</span></div>
-          <div class="body">
-            <div class="details">
-              <div class="title">
-                <a href="" target="_blank" class="">
-                  <strong
-                    >Technical Staff Intern &nbsp; · &nbsp; IP Mgmt Div.</strong
-                  >
-                </a>
-                <i class="fa-solid fa-arrow-up"></i>
-              </div>
-              <div class="description">
-                <span>
-                  Provide technical support, design creative layouts using Canva
-                  for diverse projects, and implement technical solutions. More
-                  over, maintained the database management system and
-                  troubleshoot/resolve database bugs.
-                </span>
-              </div>
-            </div>
-            <!-- <div class="links">
-            </div> -->
-            <div class="skills">
-              <span class="skill">PHP</span>
-              <span class="skill">MySQL</span>
-              <span class="skill">Canva</span>
-              <span class="skill">Video Editing</span>
-            </div>
-          </div>
-        </div>
-
-        <div class="header">
-          <div class="div">
-            <span><strong>Education</strong></span>
-            <i class="fa-solid fa-arrow-up"></i>
-          </div>
-        </div>
-        <div class="work education">
-          <div class="date"><span>Aug 2019 — July 2023</span></div>
-          <div class="body">
-            <div class="details">
-              <div class="title">
-                <a href="" target="_blank" class="">
-                  <strong
-                    >BS Information Technology &nbsp; · &nbsp; Bicol
-                    University.</strong
-                  >
-                </a>
-                <i class="fa-solid fa-arrow-up"></i>
-              </div>
-              <div class="description">
-                <span>&bull;<i> Cum Laude</i></span>
-                <span>&bull;<i> Dean's List</i></span>
-              </div>
-            </div>
-            <div class="links">
-              <a href="#" class="link" target="_blank">
-                <i class="fa-solid fa-location-dot"></i>
-                <span>Legazpi City, Albay</span></a
+            <div class="item__header">
+              <span
+                ><strong class="text-highlight hover"> About Me. </strong></span
               >
             </div>
+            <div class="item__subheader">
+              <span>
+                From interaction design to scaleable design systems, single-page
+                apps to something more experimental with WebGL. I help awesome
+                people to build ambitious yet accessible web projects -
+                <strong> the wilder, the better </strong>.
+              </span>
+            </div>
           </div>
+          <a
+            class="item__button"
+            data-color="tertiary-color"
+            data-color-bg="transparent-color"
+          >
+            <span class="label"><strong>Let's work together</strong></span>
+            <span class="fill"><strong>Let's work together</strong></span>
+          </a>
         </div>
-        <div class="work education">
-          <div class="date"><span>2017 — 2019</span></div>
-          <div class="body">
-            <div class="details">
-              <div class="title">
-                <a href="" target="_blank" class="">
-                  <strong
-                    >STEM &nbsp; · &nbsp; Ateneo de Naga University.</strong
-                  >
-                </a>
-                <i class="fa-solid fa-arrow-up"></i>
+        <div class="work__list">
+          <div class="header">
+            <div class="div">
+              <span><strong>Work Experience</strong></span>
+              <i class="fa-solid fa-arrow-up"></i>
+            </div>
+          </div>
+          <div class="work">
+            <div class="date"><span>SEP 2023 — PRESENT</span></div>
+            <div class="body">
+              <div class="details">
+                <div class="title">
+                  <a href="" target="_blank" class="">
+                    &nbsp;<strong
+                      >Junior Software Developer &nbsp; · &nbsp; Bastion,
+                      Inc.</strong
+                    >
+                  </a>
+                  <i class="fa-solid fa-arrow-up"></i>
+                </div>
+                <div class="description">
+                  &nbsp;
+                  <span>
+                    Developed and optimized web applications with ASP.NET MVC
+                    and mobile apps using Ionic Angular, focusing on
+                    functionality, responsiveness, and cross-platform
+                    compatibility. Conducted thorough testing and debugging, and
+                    maintained robust performance through ongoing updates and
+                    collaboration with cross-functional teams.
+                  </span>
+                </div>
               </div>
-              <div class="description">
-                <span>Senior High School</span>
+              <!-- <div class="links">
+                <a href="#" class="link" target="_blank">
+                  <i class="fa-solid fa-paperclip"></i>
+                  <span>OmniPay</span></a
+                >
+                <a href="#" class="link" target="_blank">
+                  <i class="fa-solid fa-paperclip"></i>
+                  <span>Binpo</span></a
+                >
+              </div> -->
+              <div class="skills">
+                <span class="skill">ASP.NET MVC</span>
+                <span class="skill">C#</span>
+                <span class="skill">Ionic Framework</span>
+                <span class="skill">AngularJS</span>
+                <span class="skill">SCSS</span>
+                <span class="skill">GitHub</span>
               </div>
             </div>
-            <div class="links">
-              <a href="#" class="link" target="_blank">
-                <i class="fa-solid fa-location-dot"></i>
-                <span>Naga City, Camarines Sur</span></a
-              >
+          </div>
+          <div class="work">
+            <div class="date"><span>Jan 2023 — May 2023</span></div>
+            <div class="body">
+              <div class="details">
+                <div class="title">
+                  <a href="" target="_blank" class="">
+                    <strong
+                      >Technical Staff Intern &nbsp; · &nbsp; IP Mgmt
+                      Div.</strong
+                    >
+                  </a>
+                  <i class="fa-solid fa-arrow-up"></i>
+                </div>
+                <div class="description">
+                  <span>
+                    Provide technical support, design creative layouts using
+                    Canva for diverse projects, and implement technical
+                    solutions. More over, maintained the database management
+                    system and troubleshoot/resolve database bugs.
+                  </span>
+                </div>
+              </div>
+              <!-- <div class="links">
+              </div> -->
+              <div class="skills">
+                <span class="skill">PHP</span>
+                <span class="skill">MySQL</span>
+                <span class="skill">Canva</span>
+                <span class="skill">Video Editing</span>
+              </div>
+            </div>
+          </div>
+          <div class="header">
+            <div class="div">
+              <span><strong>Education</strong></span>
+              <i class="fa-solid fa-arrow-up"></i>
+            </div>
+          </div>
+          <div class="work education">
+            <div class="date"><span>Aug 2019 — July 2023</span></div>
+            <div class="body">
+              <div class="details">
+                <div class="title">
+                  <a href="" target="_blank" class="">
+                    <strong
+                      >BS Information Technology &nbsp; · &nbsp; Bicol
+                      University.</strong
+                    >
+                  </a>
+                  <i class="fa-solid fa-arrow-up"></i>
+                </div>
+                <div class="description">
+                  <span>&bull;<i> Cum Laude</i></span>
+                  <span>&bull;<i> Dean's List</i></span>
+                </div>
+              </div>
+              <div class="links">
+                <a href="#" class="link" target="_blank">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <span>Legazpi City, Albay</span></a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="work education">
+            <div class="date"><span>2017 — 2019</span></div>
+            <div class="body">
+              <div class="details">
+                <div class="title">
+                  <a href="" target="_blank" class="">
+                    <strong
+                      >STEM &nbsp; · &nbsp; Ateneo de Naga University.</strong
+                    >
+                  </a>
+                  <i class="fa-solid fa-arrow-up"></i>
+                </div>
+                <div class="description">
+                  <span>Senior High School</span>
+                </div>
+              </div>
+              <div class="links">
+                <a href="#" class="link" target="_blank">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <span>Naga City, Camarines Sur</span></a
+                >
+              </div>
             </div>
           </div>
         </div>
