--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -41,7 +41,8 @@ ion-content {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
     overflow-y: scroll;
     scroll-behavior: smooth;
     // scroll-snap-type: y mandatory;
@@ -50,6 +51,16 @@ ion-content {
     z-index: 2;
     pointer-events: all;
     gap: 1rem;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+
+    scrollbar-width: none; /* Firefox */
+
+    :-webkit-scrollbar {
+      display: none;
+    }
 
     & div,
     section {
@@ -121,6 +132,7 @@ ion-content {
       align-items: center;
       justify-content: center;
       scroll-snap-align: center;
+      position: relative;
 
       .item {
         flex-direction: column;
@@ -211,247 +223,291 @@ ion-content {
       }
 
       &#work {
-        display: grid;
-        // grid-template-columns: repeat(2, 1fr);
-        grid-template-columns: calc(40% - 2rem) calc(60% - 2rem);
-        width: 100%;
-        height: 100%;
-        // min-height: calc(100vh - 7.25rem);
-        min-height: calc(100vh + 7.25rem);
-        padding-inline: 5rem;
-        gap: 4rem;
-        align-items: start;
-        justify-items: center;
+        padding-block: 7.25rem 1rem;
+        padding-inline: 5rem 3rem;
+        align-items: flex-start;
+        // min-height: calc(100vh - 1rem);
         scroll-snap-align: end;
 
-        & span {
-          --font-inter: "__inter_20b187", "__inter_Fallback_20b187";
-          font-family: var(--font-inter), ui-sans-serif, system-ui,
-            -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-            "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-            "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-            "Noto Color Emoji";
-          font-weight: 600;
-        }
+        .work__container {
+          display: grid;
+          // grid-template-columns: repeat(2, 1fr);
+          grid-template-columns: calc(40% - 2rem) calc(60% - 2rem);
+          width: 100%;
+          height: 100%;
+          // height: calc(100% - 2rem);
 
-        .item {
-          position: sticky;
-          top: 7.25rem;
-          gap: 3rem;
+          // min-height: calc(100vh - 7.25rem);
+          // min-height: calc(100vh + 7.25rem);
+          gap: 4rem;
+          align-items: start;
+          justify-items: center;
+          overflow-y: scroll;
 
-          .item__header {
-            span {
-              font-size: 3rem;
-            }
+          // margin-right: 1rem;
+          padding-right: 2rem;
+          padding-bottom: 1rem;
+
+          &::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
+            // background-color: rgba(45, 212, 191, 0.1);
+            border-radius: 1rem;
           }
 
-          .body {
-            gap: 1rem;
-          }
-        }
-
-        .work__list {
-          flex-direction: column;
-          gap: 1.5rem;
-
-          .header {
-            flex-direction: row;
-            width: auto;
-            padding-inline: 1rem;
-
-            .div {
-              align-items: center;
-              gap: 0.5rem;
-              cursor: pointer;
-
-              &:hover {
-                span {
-                  strong {
-                    color: var(--tertiary-color);
-                  }
-                }
-
-                i {
-                  transform: translate(0, -0.5rem);
-                  color: var(--tertiary-color);
-                }
-              }
-
-              i {
-                font-size: 0.75rem;
-                margin-top: 0.25rem;
-                rotate: 45deg;
-                transition: 0.3s;
-              }
-            }
+          &::-webkit-scrollbar {
+            width: 0.5rem;
+            // background-color: rgba(45, 212, 191, 0.1);
+            // background-color: rgba(255, 255, 255);
+            background-color: transparent;
+            border-radius: 1rem;
           }
 
-          &:has(.work:hover) {
-            .work {
-              &:not(:hover) {
-                opacity: 0.5;
-              }
-            }
+          &::-webkit-scrollbar-thumb {
+            background-color: rgba(255, 255, 255, 0.1);
+            // background-color: rgb(112, 123, 147);
+            // background-color: rgba(94 234 212);
+            border-radius: 1rem;
+
+            // background-image: -webkit-linear-gradient(
+            //   90deg,
+            //   rgba(0, 0, 0, 1) 0%,
+            //   rgba(0, 0, 0, 1) 25%,
+            //   transparent 100%,
+            //   rgba(0, 0, 0, 1) 75%,
+            //   transparent
+            // );
+            // background-image: var(--linear-gradient-animate);
           }
 
-          .work {
-            flex-direction: row;
-            align-items: center;
-            // justify-content: space-between;
-            padding: 1rem;
-            gap: 2rem;
-            border-radius: 0.25rem;
-            overflow: hidden;
-            backdrop-filter: blur(0.25rem);
-            transition: 0.3s;
-            cursor: pointer;
+          & span {
+            --font-inter: "__inter_20b187", "__inter_Fallback_20b187";
+            font-family: var(--font-inter), ui-sans-serif, system-ui,
+              -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+              "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+              "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+              "Noto Color Emoji";
+            font-weight: 600;
+          }
 
-            &:not(:has(.links .link:hover)) {
-              &:hover {
-                background-color: rgba(30, 41, 59, 0.5);
+          .item {
+            position: sticky;
+            top: 0;
+            gap: 3rem;
 
-                .body {
-                  .details {
-                    .title {
-                      a {
-                        background-size: 200% auto;
-                        color: var(--primary-color);
-                        background-clip: text;
-                        -webkit-background-clip: text;
-                        -webkit-text-fill-color: transparent;
-                        animation: textclip 1s linear infinite;
-                        background-image: var(--linear-gradient-animate);
-                      }
-
-                      i {
-                        transform: translate(0, -0.5rem);
-                        color: var(--tertiary-color);
-                      }
-                    }
-                  }
-                }
-              }
-            }
-
-            .date {
-              width: 100%;
-              height: 100%;
-              align-self: flex-start;
-              max-width: 8rem;
-              margin-block: 0.25rem;
-
+            .item__header {
               span {
-                font-weight: 600;
-                font-size: 0.75rem;
-                line-height: 1rem;
-                color: var(--accent-color);
+                font-size: 3rem;
               }
             }
 
             .body {
-              flex-direction: column;
               gap: 1rem;
+            }
+          }
 
-              .details {
+          .work__list {
+            flex-direction: column;
+            gap: 1.5rem;
+
+            .header {
+              flex-direction: row;
+              width: auto;
+              padding-inline: 1rem;
+
+              .div {
+                align-items: center;
                 gap: 0.5rem;
+                cursor: pointer;
 
-                .title {
-                  flex-direction: row;
-                  align-items: center;
-                  gap: 0.5rem;
-                  font-size: 1rem;
-                  color: var(--primary-color);
-
-                  // &:has(a:hover) {
-                  //   i {
-                  //     transform: translate(0, -0.5rem);
-                  //     color: var(--tertiary-color);
-                  //   }
-                  // }
-
-                  a {
-                    text-decoration: none;
-                  }
-
-                  i {
-                    font-size: 0.75rem;
-                    margin-top: 0.25rem;
-                    rotate: 45deg;
-                    transition: 0.3s;
-                  }
-                }
-
-                .description {
-                  flex-direction: row;
-
+                &:hover {
                   span {
-                    line-height: 1.5;
-                    font-size: 0.875rem;
-                    color: var(--secondary-color);
-
-                    i {
-                      color: var(--secondary-color);
-                    }
-                  }
-                }
-              }
-
-              .links {
-                flex-direction: row;
-                gap: 1rem;
-
-                a.link {
-                  display: flex;
-                  flex-direction: row;
-                  gap: 0.375rem;
-                  align-items: center;
-                  text-decoration: none;
-                  color: var(--primary-color);
-                  cursor: pointer;
-
-                  &:hover {
-                    i,
-                    span {
+                    strong {
                       color: var(--tertiary-color);
                     }
                   }
 
                   i {
-                    font-size: 0.675rem;
-                    margin-top: 0.25rem;
-                  }
-
-                  span {
-                    font-weight: 600;
-                    font-size: 0.875rem;
-                    line-height: 1.25rem;
+                    transform: translate(0, -0.5rem);
+                    color: var(--tertiary-color);
                   }
                 }
-              }
 
-              .skills {
-                flex-direction: row;
-                gap: 1rem;
-                align-items: center;
-                flex-wrap: wrap;
-
-                .skill {
+                i {
                   font-size: 0.75rem;
-                  line-height: 1.25rem;
-                  font-weight: 500;
-                  padding: 0.25rem 0.75rem;
-                  color: rgb(94 234 212);
-                  background-color: rgba(45, 212, 191, 0.1);
-                  border-radius: 0.75rem;
+                  margin-top: 0.25rem;
+                  rotate: 45deg;
+                  transition: 0.3s;
                 }
               }
             }
 
-            &.education {
+            &:has(.work:hover) {
+              .work {
+                &:not(:hover) {
+                  opacity: 0.5;
+                }
+              }
+            }
+
+            .work {
+              flex-direction: row;
+              align-items: center;
+              // justify-content: space-between;
+              padding: 1rem;
+              gap: 2rem;
+              border-radius: 0.25rem;
+              overflow: hidden;
+              backdrop-filter: blur(0.25rem);
+              transition: 0.3s;
+              cursor: pointer;
+
+              &:not(:has(.links .link:hover)) {
+                &:hover {
+                  background-color: rgba(30, 41, 59, 0.5);
+
+                  .body {
+                    .details {
+                      .title {
+                        a {
+                          background-size: 200% auto;
+                          color: var(--primary-color);
+                          background-clip: text;
+                          -webkit-background-clip: text;
+                          -webkit-text-fill-color: transparent;
+                          animation: textclip 1s linear infinite;
+                          background-image: var(--linear-gradient-animate);
+                        }
+
+                        i {
+                          transform: translate(0, -0.5rem);
+                          color: var(--tertiary-color);
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+
+              .date {
+                width: 100%;
+                height: 100%;
+                align-self: flex-start;
+                max-width: 8rem;
+                margin-block: 0.25rem;
+
+                span {
+                  font-weight: 600;
+                  font-size: 0.75rem;
+                  line-height: 1rem;
+                  color: var(--accent-color);
+                }
+              }
+
               .body {
+                flex-direction: column;
+                gap: 1rem;
+
                 .details {
+                  gap: 0.5rem;
+
+                  .title {
+                    flex-direction: row;
+                    align-items: center;
+                    gap: 0.5rem;
+                    font-size: 1rem;
+                    color: var(--primary-color);
+
+                    // &:has(a:hover) {
+                    //   i {
+                    //     transform: translate(0, -0.5rem);
+                    //     color: var(--tertiary-color);
+                    //   }
+                    // }
+
+                    a {
+                      text-decoration: none;
+                    }
+
+                    i {
+                      font-size: 0.75rem;
+                      margin-top: 0.25rem;
+                      rotate: 45deg;
+                      transition: 0.3s;
+                    }
+                  }
+
                   .description {
-                    flex-direction: column;
+                    flex-direction: row;
+
+                    span {
+                      line-height: 1.5;
+                      font-size: 0.875rem;
+                      color: var(--secondary-color);
+
+                      i {
+                        color: var(--secondary-color);
+                      }
+                    }
+                  }
+                }
+
+                .links {
+                  flex-direction: row;
+                  gap: 1rem;
+
+                  a.link {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 0.375rem;
+                    align-items: center;
+                    text-decoration: none;
+                    color: var(--primary-color);
+                    cursor: pointer;
+
+                    &:hover {
+                      i,
+                      span {
+                        color: var(--tertiary-color);
+                      }
+                    }
+
+                    i {
+                      font-size: 0.675rem;
+                      margin-top: 0.25rem;
+                    }
+
+                    span {
+                      font-weight: 600;
+                      font-size: 0.875rem;
+                      line-height: 1.25rem;
+                    }
+                  }
+                }
+
+                .skills {
+                  flex-direction: row;
+                  gap: 1rem;
+                  align-items: center;
+                  flex-wrap: wrap;
+
+                  .skill {
+                    font-size: 0.75rem;
+                    line-height: 1.25rem;
+                    font-weight: 500;
+                    padding: 0.25rem 0.75rem;
+                    color: rgb(94 234 212);
+                    background-color: rgba(45, 212, 191, 0.1);
+                    border-radius: 0.75rem;
+                  }
+                }
+              }
+
+              &.education {
+                .body {
+                  .details {
+                    .description {
+                      flex-direction: column;
+                    }
                   }
                 }
               }
