--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -65,8 +65,32 @@
     </section>
 
     <section id="work">
+      <div class="about__us" data-color="primary-color">
+        <div class="body">
+          <div class="item__header">
+            <span
+              ><strong class="text-highlight hover"> About Me. </strong></span
+            >
+          </div>
+          <div class="item__subheader">
+            <span>
+              From interaction design to scaleable design systems, single-page
+              apps to something more experimental with WebGL. I help awesome
+              people to build ambitious yet accessible web projects -
+              <strong> the wilder, the better </strong>.
+            </span>
+          </div>
+        </div>
+        <a
+          class="item__button"
+          data-color="tertiary-color"
+          data-color-bg="transparent-color"
+        >
+          <span class="label"><strong>Let's work together</strong></span>
+        </a>
+      </div>
       <div class="work__container">
-        <div class="item" data-color="primary-color">
+        <!-- <div class="item" data-color="primary-color">
           <div class="body">
             <div class="item__header">
               <span
@@ -90,7 +114,7 @@
             <span class="label"><strong>Let's work together</strong></span>
             <span class="fill"><strong>Let's work together</strong></span>
           </a>
-        </div>
+        </div> -->
         <div class="work__list">
           <div class="header">
             <div class="div">
