--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -161,6 +161,7 @@ ion-content {
         }
 
         &__button {
+          width: auto;
           padding: 1rem 3rem;
           border: 2px solid;
           border-radius: 0.5rem;
@@ -168,28 +169,10 @@ ion-content {
           cursor: pointer;
 
           &:hover {
-            .fill {
-              background-color: rgba(45, 212, 191, 0.7);
-            }
+            background-color: rgba(45, 212, 191, 0.7) !important;
           }
 
           .label {
-            position: relative;
-            z-index: 2;
-          }
-
-          .fill {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            opacity: 0.6;
-            z-index: 1;
-            border-radius: 0.4rem;
             color: var(--primary-bg);
           }
         }
@@ -223,60 +206,59 @@ ion-content {
       }
 
       &#work {
+        display: grid;
+        grid-template-columns: calc(40% - 2rem) calc(60% - 2rem);
+        width: 100%;
+        height: 100%;
         padding-block: 7.25rem 1rem;
         padding-inline: 5rem 3rem;
         align-items: flex-start;
-        // min-height: calc(100vh - 1rem);
+        gap: 4rem;
+        align-items: start;
+        justify-items: center;
         scroll-snap-align: end;
 
+        .about__us {
+          flex-direction: column;
+          position: sticky;
+          top: 7.25rem;
+          gap: 3rem;
+          align-items: flex-start;
+
+          .item__header {
+            span {
+              font-size: 3rem;
+            }
+          }
+
+          .body {
+            gap: 1rem;
+          }
+        }
+
         .work__container {
-          display: grid;
-          // grid-template-columns: repeat(2, 1fr);
-          grid-template-columns: calc(40% - 2rem) calc(60% - 2rem);
           width: 100%;
           height: 100%;
-          // height: calc(100% - 2rem);
-
-          // min-height: calc(100vh - 7.25rem);
-          // min-height: calc(100vh + 7.25rem);
           gap: 4rem;
           align-items: start;
           justify-items: center;
           overflow-y: scroll;
-
-          // margin-right: 1rem;
           padding-right: 2rem;
-          padding-bottom: 1rem;
 
           &::-webkit-scrollbar-track {
             -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
-            // background-color: rgba(45, 212, 191, 0.1);
             border-radius: 1rem;
           }
 
           &::-webkit-scrollbar {
             width: 0.5rem;
-            // background-color: rgba(45, 212, 191, 0.1);
-            // background-color: rgba(255, 255, 255);
             background-color: transparent;
             border-radius: 1rem;
           }
 
           &::-webkit-scrollbar-thumb {
             background-color: rgba(255, 255, 255, 0.1);
-            // background-color: rgb(112, 123, 147);
-            // background-color: rgba(94 234 212);
             border-radius: 1rem;
-
-            // background-image: -webkit-linear-gradient(
-            //   90deg,
-            //   rgba(0, 0, 0, 1) 0%,
-            //   rgba(0, 0, 0, 1) 25%,
-            //   transparent 100%,
-            //   rgba(0, 0, 0, 1) 75%,
-            //   transparent
-            // );
-            // background-image: var(--linear-gradient-animate);
           }
 
           & span {
@@ -291,8 +273,9 @@ ion-content {
 
           .item {
             position: sticky;
-            top: 0;
+            bottom: 0;
             gap: 3rem;
+            align-self: flex-end;
 
             .item__header {
               span {
