--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -39,7 +39,7 @@
         </ion-popover> -->
       </div>
     </nav>
-    <section id="hero">
+    <section id="hero" style="display: none">
       <div class="item" data-color="primary-color">
         <div class="item__header">
           <span>
@@ -64,7 +64,7 @@
       </div>
     </section>
 
-    <section id="work">
+    <section id="work" style="display: none">
       <div class="about__us" data-color="primary-color">
         <div class="body">
           <div class="item__header">
@@ -259,7 +259,122 @@
       </div>
     </section>
 
-    <section id="experience"></section>
+    <section id="projects">
+      <div class="section__header">
+        <div class="title">
+          <span
+            ><strong class="text-highlight hover">
+              Check out my latest work.
+            </strong></span
+          >
+        </div>
+        <div class="subtitle">
+          <span
+            >I've worked on a variety of projects, from simple websites to
+            complex web applications. Here are a few of my favorites.</span
+          >
+        </div>
+      </div>
+      <div class="section__body">
+        <div class="project__list">
+          <div class="project">
+            <div class="preview">
+              <img src="" alt="" />
+              <iframe
+                src="https://atg-db.netlify.app/"
+                frameborder="0"
+              ></iframe>
+            </div>
+            <div class="body">
+              <div class="details">
+                <div class="title">
+                  <a
+                    href="https://atg-db.netlify.app/"
+                    target="_blank"
+                    class=""
+                  >
+                    <strong
+                      >Against the Gods Database &nbsp; · &nbsp; Web App</strong
+                    >
+                  </a>
+                  <i class="fa-solid fa-arrow-up"></i>
+                </div>
+                <div class="description">
+                  <span
+                    >My personal fan-made website for the Against The Gods
+                    Donghua/Anime</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project">
+            <div class="preview">
+              <img src="" alt="" />
+              <iframe src="https://albuy.netlify.app/" frameborder="0"></iframe>
+            </div>
+            <div class="body">
+              <div class="details">
+                <div class="title">
+                  <a href="https://albuy.netlify.app/" target="_blank" class="">
+                    <strong>AlBuy &nbsp; · &nbsp; E-commerce Web App</strong>
+                  </a>
+                  <i class="fa-solid fa-arrow-up"></i>
+                </div>
+                <div class="description">
+                  <span
+                    >An E-commerce platform for DTI's One Town, One Product Hubs
+                    in Albay, Bicol.</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project">
+            <div class="preview">
+              <img src="" alt="" />
+              <iframe src="" frameborder="0"></iframe>
+            </div>
+            <div class="body">
+              <div class="details">
+                <div class="title">
+                  <a href="" target="_blank" class="">
+                    <strong>Data Analysis &nbsp; · &nbsp; Tableau</strong>
+                  </a>
+                  <i class="fa-solid fa-arrow-up"></i>
+                </div>
+                <div class="description">
+                  <span>Pre-Disaster Preparedness in Albay, Bicol.</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project">
+            <div class="preview">
+              <img src="" alt="" />
+              <iframe src="" frameborder="0"></iframe>
+            </div>
+            <div class="body">
+              <div class="details">
+                <div class="title">
+                  <a href="" target="_blank" class="">
+                    <strong>Data Analytics &nbsp; · &nbsp; R-Studio</strong>
+                  </a>
+                  <i class="fa-solid fa-arrow-up"></i>
+                </div>
+                <div class="description">
+                  <span
+                    >Procurement Management of the Resources Used During the
+                    First Quarter by Philippine Government Agencies as Response
+                    Measures to the COVID-19 Pandemic in the Bicol Region.</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </ion-content>
 
