--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -224,6 +224,7 @@ ion-content {
           top: 7.25rem;
           gap: 3rem;
           align-items: flex-start;
+          padding-bottom: 1rem;
 
           .item__header {
             span {
@@ -271,22 +272,22 @@ ion-content {
             font-weight: 600;
           }
 
-          .item {
-            position: sticky;
-            bottom: 0;
-            gap: 3rem;
-            align-self: flex-end;
+          // .item {
+          //   position: sticky;
+          //   bottom: 0;
+          //   gap: 3rem;
+          //   align-self: flex-end;
 
-            .item__header {
-              span {
-                font-size: 3rem;
-              }
-            }
+          //   .item__header {
+          //     span {
+          //       font-size: 3rem;
+          //     }
+          //   }
 
-            .body {
-              gap: 1rem;
-            }
-          }
+          //   .body {
+          //     gap: 1rem;
+          //   }
+          // }
 
           .work__list {
             flex-direction: column;
@@ -498,151 +499,221 @@ ion-content {
           }
         }
       }
+
+      &#projects {
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        padding-block: 7.25rem 1rem;
+        padding-inline: 5rem 3rem;
+        justify-content: flex-start;
+        align-items: flex-start;
+        scroll-snap-align: end;
+        gap: 2rem;
+
+        .section__header {
+          width: 100%;
+          align-items: flex-end;
+
+          .title {
+            cursor: default;
+            span {
+              font-size: 3rem;
+            }
+          }
+
+          .subtitle {
+            width: 50%;
+
+            span {
+              text-align: right;
+              font-size: 1rem;
+            }
+          }
+        }
+
+        .section__body {
+          width: 100%;
+          align-items: center;
+          justify-content: center;
+
+          .project__list {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-auto-rows: 1fr;
+            width: 60%;
+            gap: 2rem;
+
+            .project {
+              flex-direction: column;
+              padding: 1rem;
+              gap: 1rem;
+              border-radius: 0.25rem;
+              overflow: hidden;
+              backdrop-filter: blur(0.25rem);
+              transition: 0.3s;
+              cursor: pointer;
+
+              &:has(.project:hover) {
+                .project {
+                  &:not(:hover) {
+                    opacity: 0.5;
+                  }
+                }
+              }
+
+              &:not(:has(.links .link:hover)) {
+                &:hover {
+                  background-color: rgba(30, 41, 59, 0.5);
+
+                  .preview {
+                    img {
+                      display: none;
+                    }
+
+                    iframe {
+                      display: flex;
+                    }
+                  }
+
+                  .body {
+                    .details {
+                      .title {
+                        a {
+                          background-size: 200% auto;
+                          color: var(--primary-color);
+                          background-clip: text;
+                          -webkit-background-clip: text;
+                          -webkit-text-fill-color: transparent;
+                          animation: textclip 1s linear infinite;
+                          background-image: var(--linear-gradient-animate);
+                        }
+
+                        i {
+                          transform: translate(0, -0.5rem);
+                          color: var(--tertiary-color);
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+
+              .preview {
+                height: 240px;
+                aspect-ratio: 2 / 1;
+
+                img,
+                iframe {
+                  width: 100%;
+                  height: 100%;
+                }
+
+                img {
+                  display: flex;
+                }
+
+                iframe {
+                  display: none;
+                  zoom: 0.25;
+                }
+              }
+
+              .body {
+                flex-direction: column;
+                gap: 1rem;
+
+                .details {
+                  gap: 0.5rem;
+
+                  .title {
+                    flex-direction: row;
+                    align-items: center;
+                    gap: 0.5rem;
+                    font-size: 1rem;
+                    color: var(--primary-color);
+
+                    a {
+                      text-decoration: none;
+                    }
+
+                    i {
+                      font-size: 0.75rem;
+                      margin-top: 0.25rem;
+                      rotate: 45deg;
+                      transition: 0.3s;
+                    }
+                  }
+
+                  .description {
+                    flex-direction: row;
+
+                    span {
+                      line-height: 1.5;
+                      font-size: 0.875rem;
+                      color: var(--secondary-color);
+
+                      i {
+                        color: var(--secondary-color);
+                      }
+                    }
+                  }
+                }
+
+                .links {
+                  flex-direction: row;
+                  gap: 1rem;
+
+                  a.link {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 0.375rem;
+                    align-items: center;
+                    text-decoration: none;
+                    color: var(--primary-color);
+                    cursor: pointer;
+
+                    &:hover {
+                      i,
+                      span {
+                        color: var(--tertiary-color);
+                      }
+                    }
+
+                    i {
+                      font-size: 0.675rem;
+                      margin-top: 0.25rem;
+                    }
+
+                    span {
+                      font-weight: 600;
+                      font-size: 0.875rem;
+                      line-height: 1.25rem;
+                    }
+                  }
+                }
+
+                .skills {
+                  flex-direction: row;
+                  gap: 1rem;
+                  align-items: center;
+                  flex-wrap: wrap;
+
+                  .skill {
+                    font-size: 0.75rem;
+                    line-height: 1.25rem;
+                    font-weight: 500;
+                    padding: 0.25rem 0.75rem;
+                    color: rgb(94 234 212);
+                    background-color: rgba(45, 212, 191, 0.1);
+                    border-radius: 0.75rem;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
-
-// .textflip-animate {
-//   perspective: 1000px;
-
-//   span {
-//     position: relative;
-//     display: inline-block;
-//     padding: 0;
-//     transition: transform 0.3s;
-//     transform-origin: 50% 0;
-//     transform-style: preserve-3d;
-//   }
-
-//   span:before {
-//     position: absolute;
-//     top: 100%;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     content: attr(data-hover);
-//     transition: color 0.3s;
-//     transform: rotateX(-90deg);
-//     transform-origin: 50% 0;
-//     text-align: center;
-//   }
-
-//   &:hover span,
-//   &:focus span {
-//     transform: rotateX(90deg) translateY(-22px);
-//   }
-
-//   &:hover span:before,
-//   &:focus span:before {
-//     color: rgb(210, 73, 54);
-//   }
-// }
-
-.textflip-animate {
-  perspective: 1000px;
-  cursor: default;
-
-  span {
-    position: relative;
-    display: inline-block;
-    padding: 0;
-    transform-origin: 50% 0;
-    transform-style: preserve-3d;
-    animation: flip 10s infinite, textclip 5s linear infinite;
-    transition: color 0.3s;
-    background-size: 200% auto;
-    color: var(--primary-color);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    // animation: textclip 1s linear infinite;
-    background-image: linear-gradient(
-      -225deg,
-      #fff 0%,
-      #34ffe0 48%,
-      #5eead4 100%
-    );
-
-    &:before {
-      position: absolute;
-      top: 100%;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      content: attr(data-flip);
-      transform: rotateX(-90deg);
-      transform-origin: 50% 0;
-      text-align: left;
-      white-space: nowrap;
-    }
-
-    &:before {
-      // color: var(--tertiary-color);
-      // color: linear-gradient(-225deg, #fff 0%, #34ffe0 48%, #5eead4 100%);
-      // background-size: auto auto;
-      // background-clip: border-box;
-      transition: color 0.3s;
-      background-size: 200% auto;
-      color: var(--primary-color);
-      background-clip: text;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: textclip 4.95s linear infinite;
-      background-image: linear-gradient(
-        -225deg,
-        #fff 0%,
-        #34ffe0 48%,
-        #5eead4 100%
-      );
-    }
-
-    // &:hover {
-    //   background-size: auto auto;
-    //   background-clip: border-box;
-    //   background-size: 200% auto;
-    //   color: var(--primary-color);
-    //   background-clip: text;
-    //   -webkit-background-clip: text;
-    //   -webkit-text-fill-color: transparent;
-    //   animation: textclip 1s linear infinite;
-    //   background-image: linear-gradient(
-    //     -225deg,
-    //     #fff 0%,
-    //     #34ffe0 48%,
-    //     #5eead4 100%
-    //   );
-    // }
-  }
-
-  &.flipped::before {
-    color: rgb(210, 73, 54);
-  }
-}
-
-@keyframes flip {
-  0%,
-  20% {
-    transform: rotateX(0deg);
-  }
-  40%,
-  60% {
-    transform: rotateX(90deg) translateY(-22px);
-  }
-  80%,
-  100% {
-    transform: rotateX(0deg);
-  }
-}
-// @keyframes flip {
-//   0%,
-//   80% {
-//     transform: rotateX(0deg);
-//   }
-//   85%,
-//   95% {
-//     transform: rotateX(90deg) translateY(-22px);
-//   }
-//   100% {
-//     transform: rotateX(0deg);
-//   }
-// }
