--- a/src/global.css
+++ b/src/global.css
@@ -79,204 +79,204 @@
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 140px solid #fff;
+  border-right: 165px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 68%;
-  left: 74%;
+  top: 19%;
+  left: 56%;
   opacity: 0;
-  animation: shooting 13s linear infinite;
-  animation-delay: 5s;
+  animation: shooting 14s linear infinite;
+  animation-delay: 11s;
 }
 .meteors .meteor:nth-child(2) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 149px solid #fff;
+  border-right: 177px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 40%;
-  left: 56%;
+  top: 49%;
+  left: 66%;
   opacity: 0;
-  animation: shooting 10s linear infinite;
-  animation-delay: 7s;
+  animation: shooting 14s linear infinite;
+  animation-delay: 4s;
 }
 .meteors .meteor:nth-child(3) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 160px solid #fff;
+  border-right: 105px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 76%;
-  left: 95%;
+  top: 8%;
+  left: 50%;
   opacity: 0;
-  animation: shooting 13s linear infinite;
-  animation-delay: 11s;
+  animation: shooting 11s linear infinite;
+  animation-delay: 2s;
 }
 .meteors .meteor:nth-child(4) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 139px solid #fff;
+  border-right: 174px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 31%;
-  left: 65%;
+  top: 64%;
+  left: 58%;
   opacity: 0;
   animation: shooting 8s linear infinite;
-  animation-delay: 9s;
+  animation-delay: 12s;
 }
 .meteors .meteor:nth-child(5) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 108px solid #fff;
+  border-right: 138px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 17%;
-  left: 90%;
+  top: 14%;
+  left: 72%;
   opacity: 0;
-  animation: shooting 7s linear infinite;
-  animation-delay: 7s;
+  animation: shooting 12s linear infinite;
+  animation-delay: 1s;
 }
 .meteors .meteor:nth-child(6) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 175px solid #fff;
+  border-right: 128px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 11%;
-  left: 81%;
+  top: 15%;
+  left: 61%;
   opacity: 0;
-  animation: shooting 7s linear infinite;
-  animation-delay: 8s;
+  animation: shooting 13s linear infinite;
+  animation-delay: 7s;
 }
 .meteors .meteor:nth-child(7) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 172px solid #fff;
+  border-right: 179px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 68%;
-  left: 85%;
+  top: 65%;
+  left: 58%;
   opacity: 0;
   animation: shooting 11s linear infinite;
-  animation-delay: 12s;
+  animation-delay: 4s;
 }
 .meteors .meteor:nth-child(8) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 108px solid #fff;
+  border-right: 127px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 9%;
-  left: 94%;
+  top: 14%;
+  left: 42%;
   opacity: 0;
-  animation: shooting 10s linear infinite;
-  animation-delay: 7s;
+  animation: shooting 7s linear infinite;
+  animation-delay: 6s;
 }
 .meteors .meteor:nth-child(9) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 149px solid #fff;
+  border-right: 190px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 35%;
-  left: 90%;
+  top: 37%;
+  left: 91%;
   opacity: 0;
-  animation: shooting 9s linear infinite;
-  animation-delay: 9s;
+  animation: shooting 8s linear infinite;
+  animation-delay: 10s;
 }
 .meteors .meteor:nth-child(10) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 137px solid #fff;
+  border-right: 136px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 5%;
-  left: 84%;
+  top: 78%;
+  left: 71%;
   opacity: 0;
   animation: shooting 9s linear infinite;
-  animation-delay: 6s;
+  animation-delay: 12s;
 }
 .meteors .meteor:nth-child(11) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 173px solid #fff;
+  border-right: 101px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 44%;
-  left: 53%;
+  top: 34%;
+  left: 100%;
   opacity: 0;
   animation: shooting 11s linear infinite;
-  animation-delay: 5s;
+  animation-delay: 1s;
 }
 .meteors .meteor:nth-child(12) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 186px solid #fff;
+  border-right: 106px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 76%;
-  left: 85%;
+  top: 65%;
+  left: 69%;
   opacity: 0;
-  animation: shooting 12s linear infinite;
-  animation-delay: 1s;
+  animation: shooting 8s linear infinite;
+  animation-delay: 4s;
 }
 
 @keyframes shooting {
@@ -290,5 +290,61 @@
   20%, 100% {
     transform: rotate(30deg) translate(100%, 100%);
     opacity: 0;
+  }
+}
+.textflip-animate {
+  perspective: 1000px;
+  cursor: default;
+}
+.textflip-animate span {
+  position: relative;
+  display: inline-block;
+  padding: 0;
+  transform-origin: 50% 0;
+  transform-style: preserve-3d;
+  animation: flip 10s infinite, textclip 5s linear infinite;
+  transition: color 0.3s;
+  background-size: 200% auto;
+  color: var(--primary-color);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(-225deg, #fff 0%, #34ffe0 48%, #5eead4 100%);
+}
+.textflip-animate span:before {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: attr(data-flip);
+  transform: rotateX(-90deg);
+  transform-origin: 50% 0;
+  text-align: left;
+  white-space: nowrap;
+}
+.textflip-animate span:before {
+  transition: color 0.3s;
+  background-size: 200% auto;
+  color: var(--primary-color);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 4.95s linear infinite;
+  background-image: linear-gradient(-225deg, #fff 0%, #34ffe0 48%, #5eead4 100%);
+}
+.textflip-animate.flipped::before {
+  color: rgb(210, 73, 54);
+}
+
+@keyframes flip {
+  0%, 20% {
+    transform: rotateX(0deg);
+  }
+  40%, 60% {
+    transform: rotateX(90deg) translateY(-22px);
+  }
+  80%, 100% {
+    transform: rotateX(0deg);
   }
 }/*# sourceMappingURL=global.css.map */
