--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -268,12 +268,12 @@
             </strong></span
           >
         </div>
-        <div class="subtitle">
+        <!-- <div class="subtitle">
           <span
             >I've worked on a variety of projects, from simple websites to
             complex web applications. Here are a few of my favorites.</span
           >
-        </div>
+        </div> -->
       </div>
       <div class="section__body">
         <div class="project__list">
@@ -378,7 +378,7 @@
   </main>
 </ion-content>
 
-<!-- 
+<!--
 animation: {
         meteor: "meteor 5s linear infinite",
       },
