--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -76,7 +76,7 @@ ion-content {
       justify-content: space-between;
       gap: 1rem;
       position: fixed;
-      padding: 3rem;
+      padding: 1.5rem 3rem;
       // top: 3rem;
       // left: 3rem;
       z-index: 3;
@@ -210,7 +210,7 @@ ion-content {
         grid-template-columns: calc(40% - 2rem) calc(60% - 2rem);
         width: 100%;
         height: 100%;
-        padding-block: 7.25rem 1rem;
+        padding-block: 4.25rem 1rem;
         padding-inline: 5rem 3rem;
         align-items: flex-start;
         gap: 4rem;
@@ -221,7 +221,7 @@ ion-content {
         .about__us {
           flex-direction: column;
           position: sticky;
-          top: 7.25rem;
+          top: 4.25rem;
           gap: 3rem;
           align-items: flex-start;
           padding-bottom: 1rem;
@@ -504,7 +504,7 @@ ion-content {
         flex-direction: column;
         width: 100%;
         height: 100%;
-        padding-block: 7.25rem 1rem;
+        padding-block: 4.25rem 1rem;
         padding-inline: 5rem 3rem;
         justify-content: flex-start;
         align-items: flex-start;
